[tool.semantic_release]
tag_format = "v{version}"
build_command = "python -m build"

[tool.semantic_release.branches.main]
match = "main"

[tool.semantic_release.publish]
upload_to_vcs_release = true
dist_glob_patterns = ["dist/*"]

[tool.semantic_release.remote]
type = "github"
token = { env = "GH_TOKEN" }

[tool.semantic_release.pypi]
token = { env = "PYPI_TOKEN" }

[tool.semantic_release.changelog]
changelog_file = "CHANGELOG.md"

[build-system]
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
dependencies = ["requests>=2.28.0"]
